# registry/docs/swagger.json
@@ -22,6 +22,14 @@
                     "general"
                 ],
                 "summary": "Welcome message from microservice.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "auth User ID",
+                        "name": "uid",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -47,11 +55,18 @@
                 "summary": "Creates new order.",
                 "parameters": [
                     {
-                        "description": "User ID",
+                        "type": "string",
+                        "description": "auth User ID",
                         "name": "uid",
+                        "in": "query"
+                    },
+                    {
+                        "description": "Order",
+                        "name": "order",
                         "in": "body",
+                        "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/requests.OrderRequest"
                         }
                     }
                 ],
@@ -89,14 +104,13 @@
                 "tags": [
                     "orders"
                 ],
-                "summary": "Returns list of created orders for user.",
+                "summary": "Returns list of created orders for all users.",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User ID",
+                        "description": "auth User ID",
                         "name": "uid",
-                        "in": "path",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -108,6 +122,53 @@
                         "type": "string",
                         "description": "Page size",
                         "name": "size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Order"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/orders/{id}": {
+            "get": {
+                "description": "Find and return created orders of the user using paging.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders"
+                ],
+                "summary": "Returns list of created orders for user.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID to filter orders",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "auth User ID",
+                        "name": "uid",
                         "in": "query"
                     }
                 ],
@@ -142,8 +203,14 @@
                 "tags": [
                     "requests"
                 ],
-                "summary": "Returns list of created requests for users.",
+                "summary": "Returns list of created requests for all users.",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "auth User ID",
+                        "name": "uid",
+                        "in": "query"
+                    },
                     {
                         "type": "string",
                         "description": "Page number",
@@ -176,7 +243,7 @@
                 }
             }
         },
-        "/requests/{uid}": {
+        "/requests/{id}": {
             "get": {
                 "description": "Find and return created requests of the user using paging.",
                 "consumes": [
@@ -192,10 +259,16 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User ID",
-                        "name": "uid",
+                        "description": "User ID to filter requests",
+                        "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "auth User ID",
+                        "name": "uid",
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -286,13 +359,6 @@
                         "$ref": "#/definitions/models.OrderProduct"
                     },
                     "x-order": "5"
-                },
-                "updates": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.OrderUpdate"
-                    },
-                    "x-order": "6"
                 }
             }
         },
@@ -306,23 +372,6 @@
                 "quantity": {
                     "type": "integer",
                     "x-order": "1"
-                }
-            }
-        },
-        "models.OrderUpdate": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string",
-                    "x-order": "0"
-                },
-                "status": {
-                    "type": "string",
-                    "x-order": "1"
-                },
-                "timestamp": {
-                    "type": "string",
-                    "x-order": "2"
                 }
             }
         },
@@ -348,6 +397,17 @@
                 "timestamp": {
                     "type": "string",
                     "x-order": "4"
+                }
+            }
+        },
+        "requests.OrderRequest": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.OrderProduct"
+                    }
                 }
             }
         }
